@@ -14,9 +14,9 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.client.RestTemplate;
-import sun.misc.BASE64Encoder;
+import org.apache.commons.codec.binary.Base64;
 
-import javax.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletRequest;
 import java.io.UnsupportedEncodingException;
 import java.util.*;
 
@@ -24,7 +24,7 @@ import java.util.*;
  * @author zlt
  * @date 2020/3/10
  * <p>
- * Blog: https://zlt2000.gitee.io
+ * Blog: http://zlt2000.gitee.io
  * Github: https://github.com/zlt2000
  */
 @Slf4j
@@ -73,8 +73,7 @@ public class ApiController {
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_FORM_URLENCODED);
         byte[] authorization = (clientId + ":" + clientSecret).getBytes("UTF-8");
-        BASE64Encoder encoder = new BASE64Encoder();
-        String base64Auth = encoder.encode(authorization);
+        String base64Auth = Base64.encodeBase64String(authorization);
         headers.add("Authorization", "Basic " + base64Auth);
 
         MultiValueMap<String, String> param = new LinkedMultiValueMap<>();
